--- a/css/scss/Components/_gradient-bg.scss
+++ b/css/scss/Components/_gradient-bg.scss
@@ -1,3 +1,3 @@
 .bg-gradient{
-    background-color: var(--clr-gradient);
+    background-color: linear-gradient(to top, rgba(100, 103, 242, 0.1), rgba(220, 72, 239, 0.05), rgba(242, 244, 253, 0.07));
 }
