--- a/css/scss/Components/_textbox.scss
+++ b/css/scss/Components/_textbox.scss
@@ -1,3 +1,12 @@
 .textbox{
     display:flex;
+    gap:0;
+    input{
+        padding: 1rem;
+        border:none;
+        background-color: var();
+    }
+    button{
+        padding:1rem;
+    }
 }
