--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -1,10 +1,7 @@
 @import "./Mixins/mixins";
 
-
-
-
-
+@import "./Color/buttons";
 @import "./Color/color";
 @import "./Components/components";
+@import "./misc/misc";
 @import "./text/Text-style";
-@import "./misc/box-shadow";
