--- a/css/scss/Color/_color.scss
+++ b/css/scss/Color/_color.scss
@@ -1,33 +1,63 @@
 :root{
-    
-    
-    --clr-gradient: linear-gradient(to top, rgba(99, 102, 241, 10%), rgba(218, 70, 239, 5%), rgba(241, 244, 253, 7%));
     --color-white:#ffffff;
-    --color-dark: #0B0F19;
-    --color-primary: #6366F1;
-    --color-border: #E2E5F1;
-    --color-text: #0B0F19;
-    --color-text2:#565973;
+    --color-text1:#131022;
+    --color-text2:#585C7B;
     --color-text3:#9397AD;
+    --color-store-btn:#131022;
+    --color-round-bg:#FFFFFF;
+    --color-slider:#9397AD;
+    --color-btn-primary:#6366F1;
+    --color-border:#E2E5F1;
+    --cololr-smallcard: hsla(239, 84%, 67%, 0.08);
     --color-bg:#F3F6FF;
-    --color-bg-grey:hsla(239, 84%, 67%, 0.08);
-    --color-shadow:rgba(0, 0, 0, 0.2);
+    --color-button-text:#ffffff;
+    --color-gradiant: linear-gradient(to top, rgba(99, 101, 241, 0.1), rgba(219, 70, 239, 0.05)42%, rgba(241, 244, 253, 0.07)83%);
+    --color-dark:#000000;
+    --color-primary-bg:#ffffff;
+    --color-acordion-button:#3E4265;
+    --color-info:#4C82F7;
+
+    // --color-dark: #0B0F19;
+    // --color-dark50: hsla(220, 43%, 7%, 0.70);
+    // --color-primary: #6366F1;
+    // --color-border: #E2E5F1;
+    // --color-text: #0B0F19;
+    // --color-text2:#565973;
+    // --color-text3:#9397AD;
+    // --color-bg:#F3F6FF;
+    // --color-bg-grey:hsla(239, 84%, 67%, 0.08);
+    // --color-shadow:rgba(0, 0, 0, 0.2);
+    // --color-info:#4C82F7;
 }
 
 .dark{
-    color-scheme: dark;
-    --clr-gradient: linear-gradient(to top, rgba(99, 102, 241, 10%), rgba(218, 70, 239, 5%), rgba(241, 244, 253, 7%));
     --color-white:#ffffff;
-    --color-dark: #0B0F19;
-    --color-primary: #6366F1;
-    --color-border: #E2E5F1;
-    --color-text: #0B0F19;
+    --color-text1:#ffffff;
     --color-text2:hsla(0, 0%, 100%, 0.7);
-    --color-text3:#9397AD;
-    --color-bg:hsla(0, 0%, 100%, 0.04);
-    --color-bg-grey:hsla(239, 84%, 67%, 0.08);
-    --color-shadow:rgba(0, 0, 0, 0.2);
-    .btn-store{
-        display:none;
-    }
+    --color-text3:#FFFFFF;
+    --color-store-btn:#EFF2FC;
+    --color-round-bg:hsla(0, 0%, 100%, 0.05);
+    --color-slider:#6366F1;
+    --color-btn-primary:#6366F1;
+    --color-border:hsla(0, 0%, 100%, 0.15);
+    --colol-smallcard: hsla(239, 84%, 67%, 0.08);
+    --color-bg:hsla(0, 0%, 100%, 0.07);
+    --color-button-text:#ffffff;
+    --color-gradiant: linear-gradient(to top, rgba(99, 101, 241, 0.1), rgba(219, 70, 239, 0.05)42%, rgba(241, 244, 253, 0.07)83%);
+    --color-dark:#ffffff;
+    --color-primary-bg:#000000;
+    --color-acordion-button:hsla(0, 0%, 100%, 0.05);
+    --color-info:#4C82F7;
+    // color-scheme: dark;
+    // --color-white:#ffffff;
+    // --color-dark: #0B0F19;
+    // --color-primary: #6366F1;
+    // --color-border: #E2E5F1;
+    // --color-text: #0B0F19;
+    // --color-text2:hsla(0, 0%, 100%, 0.7);
+    // --color-text3:#9397AD;
+    // --color-bg:hsla(0, 0%, 100%, 0.04);
+    // --color-bg-grey:hsla(239, 84%, 67%, 0.08);
+    // --color-shadow:rgba(0, 0, 0, 0.2);
+    // --color-info:#4C82F7;
 }
