--- a/css/scss/Components/_container.scss
+++ b/css/scss/Components/_container.scss
@@ -1,4 +1,5 @@
 .container{
     @include container;
-    
+    // background-image: linear-gradient(to top, rgba(99, 101, 241, 0.1), rgba(219, 70, 239, 0.05)42%, rgba(241, 244, 253, 0.07)83%); 
+    background-color: var(--color-primary-bg);
 }
