--- a/css/scss/Mixins/_mixin-colors.scss
+++ b/css/scss/Mixins/_mixin-colors.scss
@@ -1,9 +1,11 @@
-@mixin btn-color{
-    color: white;
-    background-color: black;
-}
-
-@mixin btn-color-dark{
-    color: black;
-    background-color: white;
+@mixin button-colors($bg-color, $text-color, $hover-bg-color, $hover-text-color, $border-color: null, $hover-border-color: null){
+    background-color: var($bg-color);
+    color: var($text-color);
+    border-color: if($border-color, var($border-color), var($bg-color));
+    outline: none;
+    &:hover{
+        background-color: var($hover-bg-color);
+        color: var($hover-text-color);
+        border-color: if($hover-border-color, var($hover-border-color), var($hover-bg-color));
+    }
 }
