--- a/css/scss/Mixins/_mixins-buttons.scss
+++ b/css/scss/Mixins/_mixins-buttons.scss
@@ -1,30 +1,24 @@
 @mixin btn {
     text-align: center;
     border-radius: .5rem;
-    border: 1px solid grey;
+    border: 1px solid;
     text-decoration: none;
     margin:1rem;
 }
-@mixin store-btn {
-    text-align: center;
-    border-radius: .5rem;
-    border: 1px solid grey;
-    text-decoration: none;
-    margin:1rem;
 
-}
 @mixin btn-round {
     text-align: center;
     border-radius: 50%;
     text-decoration: none;
-    border: 1px solid grey;
+    width: 16px;
+    height: 16px;
     margin:1rem;
     padding:1rem;
 }
 @mixin btn-menu {
     text-align: center;
     text-decoration: none;
-    border: 1px solid grey;
+    background-color: transparent;
     height: 2rem;
     width:2rem;
     margin:1rem;
