--- a/css/scss/text/_Text-style.scss
+++ b/css/scss/text/_Text-style.scss
@@ -1,38 +1,91 @@
 .d1{font-size: 80px;
-    font-weight: 800;}
+    font-weight: 800;
+    color: var(--color-text1);
+}
 .d2{font-size: 72px;
-    font-weight: 800;}
+    font-weight: 800;
+    color: var(--color-text1);
+}
 .d3{font-size: 64px;
-    font-weight: 800;}
+    font-weight: 800;
+    color: var(--color-text1);
+}
 .d4{font-size: 56px;
-    font-weight: 800;}
+    font-weight: 800;
+    color: var(--color-text1);
+}
 .d5{font-size: 48px;
-    font-weight: 800;}
+    font-weight: 800;
+    color: var(--color-text1);
+}
 .d6{font-size: 42px;
-    font-weight: 800;}
+    font-weight: 800;
+    color: var(--color-text1);
+}
 
 .h1{font-size: 40px;
-    font-weight: 800;}
+    font-weight: 800;
+
+    color: var(--color-text1);
+}
 .h2{font-size: 32px;
-    font-weight: 800;}
+    font-weight: 800;
+
+    color: var(--color-text1);
+}
 .h3{font-size: 28px;
-    font-weight: 800;}
+    font-weight: 800;
+
+    color: var(--color-text1);
+}
 .h4{font-size: 24px;
-    font-weight: 800;}
+    font-weight: 800;
+
+    color: var(--color-text1);
+}
 .h5{font-size: 20px;
-    font-weight: 800;}
+    font-weight: 800;
+
+    color: var(--color-text1);
+}
 .h6{font-size: 18px;
-    font-weight: 800;}
+    font-weight: 800;
+
+    color: var(--color-text1);
+}
 
 .lead-text{font-size: 24px;
-    font-weight: 600;}
+    font-weight: 600;
+
+    color: var(--color-text1);
+}
 .xl-text{font-size: 24px;
-    font-weight: 400;}
+    font-weight: 400;
+
+    color: var(--color-text1);
+}
 .l-text{font-size: 18px;
-    font-weight: 400;}
+    font-weight: 400;
+
+    color: var(--color-text1);
+}
 .m-text{font-size: 16px;
-    font-weight: 400;}
+    font-weight: 400;
+
+    color: var(--color-text1);
+}
 .s-text{font-size: 14px;
-    font-weight: 400;}
+    font-weight: 400;
+
+    color: var(--color-text1);
+}
 .xs-text{font-size: 12px;
-    font-weight: 400;}
+    font-weight: 400;
+
+    color: var(--color-text1);
+}
+
+.nav-text{
+    text-decoration: none;
+    color: var(--color-text1)
+}
