--- a/css/main.css
+++ b/css/main.css
@@ -128,6 +128,7 @@
   border: 1px solid;
   text-decoration: none;
   margin: 1rem;
+  margin-left: 0.5rem;
   max-width: 165px;
   height: 44px;
   display: flex;
@@ -141,6 +142,7 @@
   border: 1px solid;
   text-decoration: none;
   margin: 1rem;
+  margin-left: 0.5rem;
   width: 165px;
   height: 44px;
   display: none;
@@ -161,14 +163,20 @@
   border: 1px solid;
   text-decoration: none;
   margin: 1rem;
+  margin-left: 0.5rem;
   display: block;
   padding: 0.5rem 1.5rem;
   max-width: 366px;
 }
 @media (width > 768px) {
   .btn-store {
-    display: block;
-    max-width: 126px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    max-width: 138px;
+  }
+  .btn-store img {
+    max-width: 120px;
   }
 }
 @media (width > 1400px) {
@@ -184,6 +192,7 @@
   border: 1px solid;
   text-decoration: none;
   margin: 1rem;
+  margin-left: 0.5rem;
   padding: 0.5rem 1.5rem;
   max-width: 366px;
   display: none;
@@ -191,7 +200,12 @@
 @media (width > 768px) {
   .btn-store-dark {
     display: none;
-    max-width: 126px;
+    align-items: center;
+    justify-content: center;
+    max-width: 138px;
+  }
+  .btn-store-dark img {
+    max-width: 120px;
   }
 }
 @media (width > 1400px) {
@@ -212,6 +226,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  margin: 0;
 }
 
 .btn-round-secondary {
@@ -225,6 +240,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  margin: 0;
 }
 
 .btn-menu {
@@ -237,6 +253,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  border: none;
+  margin-left: 0.5rem;
 }
 @media (width > 1400px) {
   .btn-menu {
@@ -250,6 +268,7 @@
   border: 1px solid;
   text-decoration: none;
   margin: 1rem;
+  margin-left: 0.5rem;
   cursor: pointer;
   display: flex;
   align-items: center;
@@ -266,12 +285,6 @@
 
 .container {
   max-width: 540px;
-  display: flex;
-  flex-direction: column;
-  position: relative;
-  box-sizing: border-box;
-  margin: 0 auto;
-  background-color: var(--color-primary-bg);
 }
 @media (width > 768px) {
   .container {
@@ -340,7 +353,7 @@ input:checked + .slider:before {
 }
 
 .bg-gradient {
-  background-color: linear-gradient(to top, rgba(100, 103, 242, 0.1), rgba(220, 72, 239, 0.05), rgba(242, 244, 253, 0.07));
+  background-image: linear-gradient(to top, rgba(100, 103, 242, 0.1), rgba(220, 72, 239, 0.05), rgba(242, 244, 253, 0.07));
 }
 
 .textbox {
@@ -350,7 +363,6 @@ input:checked + .slider:before {
 .textbox input {
   padding: 1rem;
   border: none;
-  background-color: var();
 }
 .textbox button {
   padding: 1rem;
