--- a/css/scss/Components/_buttons.scss
+++ b/css/scss/Components/_buttons.scss
@@ -26,8 +26,13 @@
     padding:.5rem 1.5rem;
     max-width: 366px;
     @media(width > 768px){
-        display:block;
-        max-width:126px;
+        display:flex;
+        align-items: center;
+        justify-content: center;
+        max-width: 138px;
+        img{
+            max-width: 120px;
+        }
     }
     @media(width > 1400px){
         display:block;
@@ -35,15 +40,20 @@
     }
 }
 
-
 .btn-store-dark{
     @include btn;
     padding:.5rem 1.5rem;
     max-width: 366px;
     display:none;
+
     @media(width > 768px){
         display:none;
-        max-width:126px;
+        align-items: center;
+        justify-content: center;
+        max-width: 138px;
+        img{
+            max-width: 120px;
+        }
     }
     @media(width > 1400px){
         display:none;
@@ -56,6 +66,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin:0;
 }
 
 
@@ -64,12 +75,15 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin:0;
 }
 .btn-menu{
     @include btn-menu;
     display:flex;
     align-items: center;
     justify-content: center;
+    border:none;
+    margin-left:.5rem;
     @media (width > 1400px){
         display:none;
     }
