--- a/css/main.css
+++ b/css/main.css
@@ -149,7 +149,7 @@
   align-items: center;
   justify-content: center;
 }
-@media (width > 1400px) {
+@media (min-width: 1400px) {
   .btn-sign-in {
     align-items: center;
     justify-content: center;
@@ -168,7 +168,7 @@
   padding: 0.5rem 1.5rem;
   max-width: 366px;
 }
-@media (width > 768px) {
+@media (min-width: 768px) {
   .btn-store {
     display: flex;
     align-items: center;
@@ -219,8 +219,8 @@
   text-align: center;
   border-radius: 50%;
   text-decoration: none;
-  width: 16px;
-  height: 16px;
+  width: 44px;
+  height: 44px;
   margin: 1rem;
   padding: 1rem;
   display: flex;
@@ -233,8 +233,8 @@
   text-align: center;
   border-radius: 50%;
   text-decoration: none;
-  width: 16px;
-  height: 16px;
+  width: 44px;
+  height: 44px;
   margin: 1rem;
   padding: 1rem;
   display: flex;
@@ -284,7 +284,7 @@
 }
 
 .container {
-  max-width: 540px;
+  width: 90%;
 }
 @media (width > 768px) {
   .container {
@@ -366,6 +366,17 @@ input:checked + .slider:before {
 }
 .textbox button {
   padding: 1rem;
+}
+
+.kort h1 {
+  font-size: 20px;
+  font-weight: 800;
+  color: var(--color-text1);
+}
+.kort p {
+  font-size: 16px;
+  font-weight: 400;
+  color: var(--color-text2);
 }
 
 .box-sdw1 {
@@ -507,5 +518,71 @@ input:checked + .slider:before {
 
 .nav-text {
   text-decoration: none;
+  color: var(--color-text1);
+}
+
+.header {
+  font-size: 34.1px;
+  font-weight: 800;
+  color: var(--color-text1);
+}
+@media (width > 720px) {
+  .header {
+    font-size: 44.3px;
+  }
+}
+@media (width > 1400px) {
+  .header {
+    font-size: 56px;
+    font-weight: 800;
+    color: var(--color-text1);
+  }
+}
+
+.header-small {
+  font-size: 27.9px;
+  font-weight: 800;
+  color: var(--color-text1);
+}
+@media (width > 720px) {
+  .header-small {
+    font-size: 33.5px;
+  }
+}
+@media (width > 1400px) {
+  .header-small {
+    font-size: 40px;
+    font-weight: 800;
+    color: var(--color-text1);
+  }
+}
+
+h4 {
+  font-size: 24px;
+  font-weight: 800;
+  color: var(--color-text1);
+}
+
+.general-text {
+  font-size: 18px;
+  font-weight: 400;
+  color: var(--color-text2);
+}
+
+.s-text {
+  font-size: 14px;
+  font-weight: 400;
+  color: var(--color-text1);
+}
+
+.m-text {
+  font-size: 16px;
+  font-weight: 400;
+  color: var(--color-text2);
+}
+
+.h5 {
+  font-size: 20px;
+  font-weight: 800;
   color: var(--color-text1);
 }/*# sourceMappingURL=main.css.map */
