--- a/css/scss/Components/_buttons.scss
+++ b/css/scss/Components/_buttons.scss
@@ -13,7 +13,7 @@
     display:none;
     align-items: center;
     justify-content: center;
-    @media (width > 1400px){
+    @media (min-width: 1400px){
         align-items: center;
         justify-content: center;
         display:flex;
@@ -25,7 +25,7 @@
     display: block;
     padding:.5rem 1.5rem;
     max-width: 366px;
-    @media(width > 768px){
+    @media(min-width: 768px){
         display:flex;
         align-items: center;
         justify-content: center;
