--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ html{
   background-image: var(--clr-gradient);
   width: 100%;
 
+
 }
 .bg-primary{
   background-color:var(--color-bg);
@@ -38,6 +39,7 @@ html{
 body{
   font-family: "manrope", sans-serif;
 }
+
 .c1a{
   display:grid;
   grid-template-columns:1fr auto auto;
@@ -71,7 +73,6 @@ body{
   justify-content: center;
   display: flex;
   flex-direction: column; 
-  margin: .5rem;
   margin:0 auto;
   .phone2{
   display:none;
@@ -136,16 +137,14 @@ body{
       grid-column: 2;
       margin-left:30px;
       margin-bottom: 0;
-      font-weight: 800;
-      font-size: 20px;
+
       text-align: start;
     }
     p{
       grid-column: 2;
       grid-column: 2;
       margin-left: 30px;
-      font-weight: 400;
-      font-size: 16px;
+
       text-align: start;
     }
   }
@@ -178,6 +177,7 @@ body{
   padding-bottom: 2rem;
   h1{
     padding-top:2rem;
+    
   }
   p{
     padding-top:2rem;
@@ -206,7 +206,7 @@ body{
   }
 
 }
-.imgshowrow{
+.img-showrow{
   padding-top:2rem;
 }
 #img-tablet{
@@ -345,7 +345,7 @@ body{
   }
 }
 .c6{
-  background-color: var(--color-bg);  
+  /* background-color: var(--color-bg);   */
   border-radius: 0.5em;
   margin:1rem;
   
@@ -440,10 +440,7 @@ body{
 @media (width > 768px){
   .tablet-only{
     display:block}
-  .container{ 
-  max-width:720px;
 
-  }
   .c1{
     .c1a{
       display: grid;
@@ -507,7 +504,6 @@ body{
     }
 
   }
-
   .c2{
     margin: 0 auto;
     .logotyp{
@@ -539,7 +535,7 @@ body{
   
     }
   }
-  .imgshowrow{
+  .img-showrow{
     padding-top:2rem;
     #img-phone{
       display:none
@@ -660,9 +656,9 @@ body{
 }
 
 @media (width > 1400px){
-  .container{ 
+  /* .container{ 
     margin: 0 auto;
-    max-width: 1320px;}
+    max-width: 1320px;} */
   .desktop-only{
     display:block;
   }
