--- a/css/scss/Components/_buttons.scss
+++ b/css/scss/Components/_buttons.scss
@@ -2,6 +2,7 @@
     @include btn;
     max-width: 165px;
     height: 44px;
+    border:none;
     display:flex;
     align-items: center;
     justify-content: center;
@@ -13,6 +14,7 @@
     display:none;
     align-items: center;
     justify-content: center;
+    border:none;
     @media (min-width: 1400px){
         align-items: center;
         justify-content: center;
@@ -67,6 +69,10 @@
     justify-content: center;
     align-items: center;
     margin:0;
+    border:none;
+    &:hover{
+        cursor: pointer;
+    }
 }
 
 
@@ -76,6 +82,7 @@
     justify-content: center;
     align-items: center;
     margin:0;
+    border:none;
 }
 .btn-menu{
     @include btn-menu;
@@ -97,6 +104,7 @@
     border-radius: 0 .5rem .5rem 0;
     max-width: 114px;
     margin:0;
+    
     @media (width > 1400px){
     max-width: 140px;
     }
