--- a/css/scss/Components/_components.scss
+++ b/css/scss/Components/_components.scss
@@ -3,4 +3,5 @@
 @import "./dark-mode-theme";
 @import "./gradient-bg";
 @import "./textbox";
-@import "./cards"
+@import "./cards";
+@import "./acordion";
