--- a/css/scss/Components/_dark-mode-theme.scss
+++ b/css/scss/Components/_dark-mode-theme.scss
@@ -21,7 +21,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: black;
+    background-color:var(--color-btn-slider);
     -webkit-transition: .4s;
     transition: .4s;
   }
@@ -39,7 +39,7 @@
   }
   
 input:checked + .slider {
-    background-color:blue;
+    background-color:var(--color-btn-slider);
   }
   
 input:focus + .slider {
