--- a/css/scss/Mixins/_mixins-buttons.scss
+++ b/css/scss/Mixins/_mixins-buttons.scss
@@ -5,6 +5,9 @@
     text-decoration: none;
     margin:1rem;
     margin-left:.5rem;
+    &:hover{
+        cursor: pointer;
+    }
 }
 
 @mixin btn-round {
@@ -15,6 +18,9 @@
     height: 44px;
     margin:1rem;
     padding:1rem;
+    &:hover{
+        cursor: pointer;
+    }
 }
 @mixin btn-menu {
     text-align: center;
