--- a/style.css
+++ b/style.css
@@ -212,23 +212,7 @@ body{
 #img-tablet{
   display:none;
 }
-.bottele{
-  margin-left: 10px;
-  margin-right: 20px;
-  h1{
-    font-size: 21.6px;
-    color: var(--clr-font-h);
-    font-weight: 800;
-    margin-left: 2rem;
-    margin-right: 2rem;
-  }
 
-  p{
-    font-size: 16px;
-    color: var(--clr-font-p);
-    font-weight: 400;
-  }
-}
 .c4{
   display:none;
 }
@@ -252,12 +236,10 @@ body{
     align-items: center;
     justify-content: center;
     border:none;
-    background-color: var(--clr-brandbtn);
     border-radius: 50%;
     padding:1rem;
     height: 36px;
     width: 36px;
-    box-shadow: 0 4px 8px 0 var(--clr-shadow);
   }
   .faq-bt-closed{
     display: flex;
@@ -273,6 +255,7 @@ body{
   .faq-expanded{
     border-bottom: 1px solid var(--color-border);
     text-align: start;
+    padding-bottom: .5rem;
     .faq1b{
       display:grid;
       grid-template-columns: 1fr auto;
@@ -293,27 +276,29 @@ body{
   .faq-close{
     display:grid;
     grid-template-columns: 1fr auto;
-    padding:0.5rem;
+    padding-bottom:0.5rem;
     border-bottom: 1px solid var(--color-border);
     gap:1rem;
     align-items: center;
     justify-content: center;
     margin:0;
-    padding-left:0;
-    .btn-round{
-      background-color: var(--color-bg);
-    }
+    padding:.5rem;
     span{
       margin-left:1rem;
       text-align: start;
+      font-size: 14px;
     }
   }
-  .faqborder{
+  .acordion-container{
     border: 1px solid var(--color-border);
     border-radius: 0.5rem;
     text-align: start;
     margin-top: 2rem;
     margin-bottom: 2rem;
+    span{
+      font-size:16px;
+      font-weight: 600;
+    }
   }
   #faq2{
     @media (width < 768px){
@@ -345,7 +330,7 @@ body{
   }
 }
 .c6{
-  /* background-color: var(--color-bg);   */
+  background-color: var(--color-bg);  
   border-radius: 0.5em;
   margin:1rem;
   
@@ -354,18 +339,21 @@ body{
   }
   .label-phone{
     font-size:21.6px;
-    font-weight: 900;
-    padding-left:1rem;
+    font-weight: 800;
   }
   .subkort{
     display:flex;
-    margin-left: 2rem;
     margin-bottom: 1rem;
     align-items: center;
     justify-content: center;
+    text-align: start;
     flex-direction: row;
-    .label-desk{
-      color:var(--clr-header);
+    p{
+      margin:0;
+    }
+    img{
+      margin:0;
+      margin-right: 2rem;
     }
   }   
   .Subscirbe-form{
@@ -394,6 +382,7 @@ body{
     background-image: url(img/Bg/Email-envelope.svg);
     background-repeat: no-repeat;
     background-position: 10px;
+    color: var(--color-text-form)
   }
   
   .textbox-sub{
@@ -403,7 +392,7 @@ body{
     width: 100%;
   }
   .contact-box{
-    border:1px solid var(--clr-border);
+    border:1px solid var(--color-border);
     border-radius: .5rem;
     margin:1rem;
   }
@@ -414,15 +403,7 @@ body{
     padding-bottom:1rem;
     
   }
-  .contactbtn{
-    background-color: var(--clr-primary);
-    text-align: center;
-    color: var(--clr-btn-text);
-    border-radius: 8px;
-    text-decoration: none;
-    padding: 12px 25px;
-    border:none;
-  }
+
 }
 .c7{
   display:flex;
@@ -491,7 +472,7 @@ body{
       grid-row:3;
       gap: 0;
       margin:0 auto;
-      padding-left: .5rem;
+      padding-left:0;
       .darkmode-only-block{
         display:flex;
         margin-left:0;
@@ -500,7 +481,9 @@ body{
     .pilcont{
       grid-row:4;
       padding-left:.5rem;
-      margin: 0 auto;
+      justify-content: start;
+      margin:0;
+      text-align: start;
     }
 
   }
@@ -599,7 +582,7 @@ body{
       justify-content: center;
     }
 
-    .faqborder{
+    .acordion-container{
       border:none;
     }
     .faq-close{
@@ -607,13 +590,11 @@ body{
       margin-bottom: 1rem;
       align-items: center;
       border:none;
-      box-shadow:  0 4px 8px 0 var(--color-dark);
     }
     .faq-expanded{
       border-radius: .5rem;
       margin-bottom: 1rem;
       border:none;
-      box-shadow:  0 4px 8px 0 var(--color-dark);
 
       .faq1b{
         border:none;
@@ -633,21 +614,23 @@ body{
     align-items: center;
     justify-content: center;
     text-align: center;
+    margin-top:2rem;
     .textbox-sub{
       margin-right:2rem;
     
     }
     .subkort{
       text-align: start;
-      margin-right:2rem;
-      padding-left:0;
+      padding-right:2rem;
     }
     .textbox-sub{
       margin:0;
+      padding-left:2rem;
       padding-bottom:0;
     }
   }
-  .fotnot{
+  .c7{
+    padding-top:2rem;
     padding-bottom:2rem;
   }
   .force-grid{
@@ -937,7 +920,7 @@ body{
       grid-row:3;
       margin-left: 1rem;
     }
-    .faqborder{
+    .acordion-container{
       grid-column: 2;
       grid-row:1 / 4;
       margin-left: 10rem;
@@ -945,11 +928,12 @@ body{
 
   }
   .c6{
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
     margin-top:5rem;
     padding:5rem;
     margin-bottom:5rem;
-    
+    justify-content: space-between;
     .label-phone{
       display:none
     }
@@ -957,18 +941,21 @@ body{
       display:block;
       text-align: start;
     }
-    .textbox{
+    .textbox-sub{
       margin:0;
-      .from-input{
-        width: 330px;
-      }
-      button{
-        width:140px;
+      .textbox{
+        margin:0;
+        button{
+          width:142px
+        }
+        #email{
+          max-width: 400px;
+          width: 322px;
+          margin:0;
+        }
       }
     }
- 
- 
- 
+
   }
   .fotnot{
     padding-top: 3rem;
